Prevent popup menus from appearing off screen
This stops popup menus and help tips from appearing off the edge of the user's
screen and makes them scrollable if too large (probably more relevant for help
than menus).

--- a/shesmu-server/src/main/resources/ca/on/oicr/gsi/shesmu/main.css
+++ b/shesmu-server/src/main/resources/ca/on/oicr/gsi/shesmu/main.css
@@ -758,6 +758,9 @@ a.button.danger:visited {
   background: var(--widget-negative);
   border: 1px solid var(--widget-text);
   border-radius: 0.1em;
+  max-height: 90vh;
+  max-width: 90vw;
+  overflow: auto;
 }
 .menucapture > div > div {
   color: var(--widget-text);
